--- a/tribe-project/src/App.css
+++ b/tribe-project/src/App.css
@@ -4,26 +4,23 @@
 }
 
 .App-header {
-  margin: 0%;
-  padding: 0%;
+  
   padding-top: 7%;
-  padding-bottom: 11%;
-  background-image: url(./images/backr.jpg);
+  padding-bottom: 45%;
+  background-image: url('./images/backr.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   font-weight: bold;
   background-attachment: fixed;
+  }
   
-  
-}
-
-
 .input[type=text] {
-  text-size-adjust: 16px;
+  text-size-adjust: 26px;
   cursor: pointer;
-  border-radius: 50px;
+  border-radius: 50%;
+  padding-top: 20%;
   
   
   
@@ -70,13 +67,13 @@
 
 .row {
   display: flex;
-
   
 }
 
 
 .column {
-  width: 60%;
+  width: 25%;
+ 
   
   
   
@@ -91,17 +88,9 @@
   overflow: hidden; 
   bottom: 0;
   position: fixed;
-  padding-left: 130px;
-  width: 35%;
-  align-items: center;
-
-
-
-@media screen and (min-width: 480px) {
-  #leftsidebar {width: 200px; float: left;}
-  #main {margin-left: 216px;}
-}
-  
+  padding-left: 150px;
+  width: 30%;
+  align-items: center
 
 }
 
@@ -110,10 +99,12 @@
   float: left;
   display: block;
   color: #f2f2f2;
-  padding: 10px 20px;
+  padding: 10px;
+  padding-right: 40px;
   text-decoration: none;
   font-size: 17px;
   align-items: center;
+  margin: center;
   
 }
 
@@ -131,6 +122,28 @@
 /* Hide the link that should open and close the navbar on small screens */
 .navbar .icon {
   display: none;
+}
+
+#btn {
+background-color: #0e06f5;
+width: 3%;
+padding-top: 0.5%;
+padding-bottom: 0.5%;
+color: #f2f2f2;
+font-weight: bold;
+cursor: pointer;
+border-radius: 20px;
+
+
+}
+
+#txtf {
+
+  border-radius: 20px;
+  padding-top: 0.5%;
+  padding-bottom: 0.5%;
+  width: 15%;
+  
 }
 
 
